default/objects/User/fields/CCS_Default_Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>CCS_Default_Queue_Email__c</fullName>
    <description>STCP1-378/ the field is used for manually created cases with Support_CCS record type/ has been created separately from Default_Queue_Email__c field because there are some agents in both groups (CCS and Shell). For different record types they are having different default queue emails</description>
    <inlineHelpText>Displays default queue email address which is usually CCS Service Agents worked with.</inlineHelpText>
    <label>CCS Default Queue Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>zakaznicka.podpora@ccs.cz</fullName>
            </value>
            <value>
                <fullName>provoz@ccs.cz</fullName>
            </value>
            <value>
                <fullName>market@ccs.cz</fullName>
            </value>
            <value>
                <fullName>obchod@ccs.cz</fullName>
            </value>
            <value>
                <fullName>kredit@ccs.cz</fullName>
            </value>
            <value>
                <fullName>premiumservis@ccs.cz</fullName>
            </value>
            <value>
                <fullName>uta@ccs.cz</fullName>
            </value>
            <value>
                <fullName>myto@ccs.cz</fullName>
            </value>
            <value>
                <fullName>reklamace@ccs.cz</fullName>
            </value>
            <value>
                <fullName>zakaznicke@ccs.sk</fullName>
            </value>
            <value>
                <fullName>bonus@ccs.cz</fullName>
            </value>
            <value>
                <fullName>eurotoll@ccs.cz</fullName>
            </value>
            <value>
                <fullName>kredit@ccs.sk</fullName>
            </value>
            <value>
                <fullName>info@ccs.cz</fullName>
                <isActive>false</isActive>
                <label>info@ccs.cz</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>