default/objects/User/fields/CCS_OZ_Number__c.field-meta.xml
<CustomField>
    <fullName>CCS_OZ_Number__c</fullName>
    <description>OZ Number of CCS employee.</description>
    <inlineHelpText>OZ Number of CCS employee.</inlineHelpText>
    <label>CCS OZ Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>