default/objects/User/fields/Create_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Create_Sales_Plan__c</fullName>
    <formula>HYPERLINK(&quot;/apex/createsalesplan?uid=&quot;&amp;  Id ,  &#39;open wizard&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Sales Plan</label>
    <type>Text</type>
</CustomField>