default/objects/User/fields/CTI_Extension__c.field-meta.xml
<CustomField>
    <fullName>CTI_Extension__c</fullName>
    <label>CTI Extension</label>
    <length>64</length>
    <type>Text</type>
</CustomField>