default/objects/User/fields/CTI_Phone__c.field-meta.xml
<CustomField>
    <fullName>CTI_Phone__c</fullName>
    <label>CTI Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>