default/objects/User/fields/Deactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_By__c</fullName>
    <description>Automatically populated via User Process Builder Flow.</description>
    <label>Deactivated By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>