default/objects/User/fields/Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Date__c</fullName>
    <description>Automatically populated via User Process Builder Flow.</description>
    <label>Deactivated Date</label>
    <type>Date</type>
</CustomField>