default/objects/User/fields/Default_Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue_Email__c</fullName>
    <description>STCP1-347/to specify default queue email for service agents in europe/updated manually by Service Managers</description>
    <inlineHelpText>Displays default queue email address which is usually Service Agents worked with.</inlineHelpText>
    <label>Default Queue Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>klantendienst@fleetcorcards.be</fullName>
            </value>
            <value>
                <fullName>klantenservice@fleetcor.nl</fullName>
            </value>
            <value>
                <fullName>kundenservice@fleetcor.at</fullName>
            </value>
            <value>
                <fullName>kundenservice@fleetcor.ch</fullName>
            </value>
            <value>
                <fullName>kundenservice@fleetcor.de</fullName>
            </value>
            <value>
                <fullName>obslugaklienta@fleetcor.pl</fullName>
            </value>
            <value>
                <fullName>premiumservice@fleetcor.eu</fullName>
            </value>
            <value>
                <fullName>serviceclients@fleetcor.ch</fullName>
            </value>
            <value>
                <fullName>serviceclients@fleetcor.fr</fullName>
            </value>
            <value>
                <fullName>serviceclients@fleetcor.lu</fullName>
            </value>
            <value>
                <fullName>serviceclients@fleetcorcards.be</fullName>
            </value>
            <value>
                <fullName>servizioclienti@fleetcor.ch</fullName>
            </value>
            <value>
                <fullName>ugyfelszolgalat@fleetcor.hu</fullName>
            </value>
            <value>
                <fullName>zakaznickyservis@fleetcor.cz</fullName>
            </value>
            <value>
                <fullName>zakaznickyservis@fleetcor.sk</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.de</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.nl</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.fr</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.cz</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.at</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.ch</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.hu</fullName>
            </value>
            <value>
                <fullName>credit@fleetcorcards.be</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.lu</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.pl</fullName>
            </value>
            <value>
                <fullName>credit@fleetcor.sk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>