default/objects/User/fields/Earned_Points__c.field-meta.xml
<CustomField>
    <fullName>Earned_Points__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Earned Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>