default/objects/User/fields/FieldSales_Territory__c.field-meta.xml
<CustomField>
    <fullName>FieldSales_Territory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>marking of project participants of the territory</description>
    <label>FieldSales_Territory</label>
    <type>Checkbox</type>
</CustomField>