default/objects/User/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not a sales</fullName>
            </value>
            <value>
                <fullName>Sales consultant</fullName>
            </value>
            <value>
                <fullName>Senior consultant</fullName>
            </value>
            <value>
                <fullName>Top consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>