default/objects/User/fields/Naumen_UUID__c.field-meta.xml
<CustomField>
    <fullName>Naumen_UUID__c</fullName>
    <description>UUID of the operator in Naumen</description>
    <label>Naumen UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>