default/objects/User/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>For notes purposes about User</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>