default/objects/User/fields/Nr_User__c.field-meta.xml
<CustomField>
    <fullName>Nr_User__c</fullName>
    <displayFormat>Ures-{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Nr User</label>
    <type>AutoNumber</type>
</CustomField>