default/objects/User/fields/Personnel_Number__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Number__c</fullName>
    <description>табельный номер сотрудника ППР</description>
    <label>Таб. №</label>
    <length>10</length>
    <type>Text</type>
</CustomField>