default/objects/User/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>