default/objects/User/fields/PPR_Legacy_User_id__c.field-meta.xml
<CustomField>
    <fullName>PPR_Legacy_User_id__c</fullName>
    <label>PPR Legacy User id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>