default/objects/User/fields/role__c.field-meta.xml
<CustomField>
    <fullName>role__c</fullName>
    <formula>UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>role</label>
    <type>Text</type>
</CustomField>