default/objects/User/fields/User_id_not_case_sensitive__c.field-meta.xml
<CustomField>
    <fullName>User_id_not_case_sensitive__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id is not case sensitive</label>
    <type>Text</type>
</CustomField>