default/objects/User/fields/User_Transit_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Transit_Id__c</fullName>
    <label>User Transit Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>