default/objects/User/listViews/Active_Users_WE.listView-meta.xml
<ListView>
    <fullName>Active_Users_WE</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>dsfs__DSProSFUsername__c</columns>
    <columns>dsfs__DSProSFMembershipStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region_of_allocation__c</field>
        <operation>equals</operation>
        <value>WE</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active_Users_WE</label>
    <language>en_US</language>
</ListView>