default/objects/User/listViews/NVM_Users.listView-meta.xml
<ListView>
    <fullName>NVM_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>NVMContactWorld__NVM_Agent_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NVMConnect__isDiallerUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NVM Users</label>
    <language>en_US</language>
</ListView>