default/objects/User/listViews/PPR_Russian_Users_NVM.listView-meta.xml
<ListView>
    <fullName>PPR_Russian_Users_NVM</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NVMContactWorld__NVM_Agent_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>PPR Bryansk Partner Sales (2)</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PPR Russian Users NVM</label>
    <language>en_US</language>
</ListView>